--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -2,13 +2,7 @@
 name: Deploy Jekyll with GitHub Pages dependencies preinstalled
 
 on:
-  create:
-    tags:
   workflow_call:
-    inputs:
-      version:
-        required: false
-        type: string
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
@@ -34,7 +28,8 @@ jobs:
         uses: azure/setup-helm@v1
         with:
           version: v3.8.1
-
+      - name: Expose git commit data
+        uses: rlespinasse/git-commit-data-action@v1
       - name: Build with Jekyll
         uses: actions/jekyll-build-pages@v1
         with:
@@ -43,7 +38,7 @@ jobs:
       - name: Helm package
         run: |
           helm package  charts/openIM
-          helm repo index . --url https://github.com/OpenIMSDK/openim-charts/releases/download/v3.0.0-alpha1
+          helm repo index . --url https://github.com/OpenIMSDK/openim-charts/releases/download/${{ inputs.version }}
           sudo cp  index.yaml _site/
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
