--- a/charts/openIM/templates/job-kafka.yaml
+++ b/charts/openIM/templates/job-kafka.yaml
@@ -2,6 +2,10 @@ kind: Job
 apiVersion: batch/v1
 metadata:
   name: kafka-topic-{{ include "openIM.fullname" . }}
+  annotations:
+    "helm.sh/hook": pre-install,pre-upgrade
+    "helm.sh/hook-weight": "-5"
+    "helm.sh/hook-delete-policy": hook-succeeded
   labels:
     {{- include "openIM.labels" . | nindent 4 }}
     app: kafka-topic
