feature(main): add helm chart release for openIM
Signed-off-by: cuisongliu <cuisongliu@qq.com>

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -2,8 +2,10 @@
 name: Deploy Jekyll with GitHub Pages dependencies preinstalled
 
 on:
-  workflow_call:
-
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+  repository_dispatch:
+    types: [ release_success ]
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
@@ -28,8 +30,7 @@ jobs:
         uses: azure/setup-helm@v1
         with:
           version: v3.8.1
-      - name: Expose git commit data
-        uses: rlespinasse/git-commit-data-action@v1
+
       - name: Build with Jekyll
         uses: actions/jekyll-build-pages@v1
         with:
@@ -37,8 +38,11 @@ jobs:
           destination: ./_site
       - name: Helm package
         run: |
-          helm package  charts/openIM
-          helm repo index . --url https://github.com/OpenIMSDK/openim-charts/releases/download/${{ inputs.version }}
+          if [[ "${{ github.event_name }}" == "repository_dispatch" ]]; then
+            bash helm.sh ${{ github.event.client_payload.ref }}
+          elif [[ "${{ github.event_name }}" == "workflow_dispatch" ]]; then
+            bash helm.sh
+          fi
           sudo cp  index.yaml _site/
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
