--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -2,6 +2,8 @@
 name: Deploy Jekyll with GitHub Pages dependencies preinstalled
 
 on:
+  push:
+    branches: [ main ]
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
   repository_dispatch:
@@ -41,6 +43,8 @@ jobs:
           if [[ "${{ github.event_name }}" == "repository_dispatch" ]]; then
             bash helm.sh ${{ github.event.client_payload.ref }}
           elif [[ "${{ github.event_name }}" == "workflow_dispatch" ]]; then
+            bash helm.sh
+          elif [[ "${{ github.event_name }}" == "push" ]]; then
             bash helm.sh
           fi
           sudo cp  index.yaml _site/
