--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,6 +28,7 @@ jobs:
 
       - name: Helm package
         run: |
+          mkdir -p charts
           cp -rf openIM ./charts/
           latest_release=${{ steps.prepare.outputs.tag_name }}
           if [[ ${latest_release#v} == "3.0.0-beta.0" ]]; then
